--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,38 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Work Sans", sans-serif;
   margin-bottom: 40px;
+  text-align: justify;
 }
 
 body.experiment-page {
   margin-bottom: 0;
 }
+
+body {
+  line-height: 2;
+}
+
+.acp-container {
+  width: 80%;
+  min-width: 600px;
+  max-width: 900px;
+}
+
+.acp-img {
+  width: 100%;
+  max-width: 700px;
+}
+
+.key {
+  background-color: #eee;
+  padding: 3px;
+  border: 1px solid #939393;
+  border-radius: 2px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+
+
 
 .pid {
   color: red;
