--- a/css/style.css
+++ b/css/style.css
@@ -23,15 +23,57 @@ body {
   max-width: 700px;
 }
 
+.circle-img {
+  width: 100px;
+  margin: 0 auto;
+}
+
 .key {
   background-color: #eee;
   padding: 3px;
-  border: 1px solid #939393;
+  border: 1px solid #d6d6d6;
   border-radius: 2px;
   text-transform: uppercase;
   font-size: 0.8em;
 }
 
+.survey-main {
+  height: 100%;
+}
+
+.survey-container {
+  width: 100%;
+  height: 600px;
+}
+
+
+h1 {
+  color: #2D89E1;
+  font-weight: 400;
+  font-size: 30px;
+  font-style: normal;
+  text-align: center;
+}
+
+
+h2 {
+  color: #2776c4;
+  font-weight: 300;
+  font-size: 25px;
+  border-left: 8px solid #CEE5FC;
+  padding-left: 10px;
+  margin-top: 45px;
+}
+
+h3 {
+  text-transform: uppercase;
+  color: #2776c4;
+  font-weight: 300;
+  font-size: 18px;
+  text-align: center;
+  padding: 10px 20px;
+  border-bottom: 4px solid #CEE5FC;
+}
 
 
 .pid {
