--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,15 @@ h3 {
   border-bottom: 4px solid #CEE5FC;
 }
 
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.autocompaste-textarea {
+  padding: 5px;
+  line-height: 1.4;
+}
 
 .pid {
   color: red;
@@ -119,7 +128,6 @@ h3 {
 }
 
 #autocompaste-display > .wm-window .modal-header:hover {
-  background-color: #f0f0f0;
   transition: all .3s;
 }
 
@@ -181,7 +189,11 @@ h3 {
 }
 
 #autocompaste-display > .wm-window-focused .modal-header h4 {
-  color: #333333;
+  color: #fff;
+}
+
+#autocompaste-display > .wm-window-focused .modal-header{
+  background-color: rgb(0, 54, 101);
 }
 
 /* Error overlay styles */
