--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Work Sans", sans-serif;
+  font-size: 17px;
   margin-bottom: 40px;
   text-align: justify;
 }
@@ -14,7 +15,7 @@ body {
 
 .acp-container {
   width: 80%;
-  min-width: 600px;
+  min-width: 700px;
   max-width: 900px;
 }
 
@@ -24,7 +25,7 @@ body {
 }
 
 .circle-img {
-  width: 100px;
+  width: 120px;
   margin: 0 auto;
 }
 
@@ -43,7 +44,7 @@ body {
 
 .survey-container {
   width: 100%;
-  height: 600px;
+  height: 700px;
 }
 
 
